[package]
name = "hacash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hacash_sdk"
# version = "0.1.0"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
# cc = "1.0"


[dependencies]
concat-idents = "1.1.3"
hex = "0.4.3"
base58check = "0.1.0"
num-traits = "0.2"
num-bigint = "0.4.3"

# chrono = "0.4.19"
# lazy_static = "1.4.0"
# rand = "0.8.5"
# libsecp256k1 = "0.7.0"
# ripemd = "0.1.1"
# sha3 = "0.10.1"
# sha2 = "0.10.2"
# concat-idents = "1.1.3"
# easy-http-request = "0.2.13"

# ini = "1.3.0"
# rusty-leveldb = "1.0.1"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
