[package]
name = "hacash"
version = "0.1.0"
edition = "2021"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "hacash_sdk"
# version = "0.1.0"
crate-type = ["staticlib", "cdylib"]


[build-dependencies]
cc = "1.0"


[dependencies]
libc = "0.2.4"
chrono = "0.4.38"
lazy_static = "1.4.0"
concat-idents = "1.1.5"
hex = "0.4.3"
base58check = "0.1.0"
num-traits = "0.2"
num-bigint = "0.4.3"
getrandom = { version = "0.2.14", features = ["js"] }
libsecp256k1 = "0.7.0"
ripemd = "0.1.1"
sha3 = "0.10.1"
sha2 = "0.10.2"
regex = "1.10.0"
wasm-bindgen = "0.2.87"
ini = "1.3.0"
leveldb-sys = "2.0.9"
dyn-clone = "1.0.17"
http_req = "0.10.2"
tokio = { version = "1", features = ["rt", "net"] }



# rocksdb = "0.22.0"
# easy-http-request = "0.2.13"
# rusty-leveldb = "3.0.0"
# leveldb = "0.8.6"



[profile.release]
opt-level = 2       # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

